<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:maxLines="1"
            android:inputType="textWebEmailAddress"
            android:id="@+id/usernameTxt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:maxLines="1"
            android:id="@+id/passwordTxt"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textSize="15sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="20dp"
                android:id="@+id/loginBtn"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="80dp"/>


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>